# markmate

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: course-designer.yml  publish.yml
course-designer/course-designer/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
course-designer/course-designer/src/: App.tsx  index.css  types.ts
course-designer/course-designer/src/components/: CourseInfo.tsx  CoursePathWithArrows.tsx  CourseSelector.tsx  Map.tsx  RoundingIndicator.tsx
course-designer/course-designer/src/hooks/: useData.ts
course-designer/course-designer/src/utils/: coordinates.ts
docs/design/: course-designer.md
hyc/: course_lengths.csv  courses.json  marks.json
markmate/: cli.py  compute.py  csv.py  enums.py  load.py  models.py  pdf.py
markmate/cli/: __init__.py  course.py  mark.py  pdf.py
